[gd_scene load_steps=4 format=3 uid="uid://bkle8u0ipe4qw"]

[ext_resource type="PackedScene" uid="uid://i5mvhnpi6ye8" path="res://Battle/BaseCreatureWidget.tscn" id="1_oysrp"]
[ext_resource type="Script" path="res://Battle/CharacterWidget.gd" id="1_ttnet"]
[ext_resource type="Script" path="res://Battle/CharacterWidgetImageTextureRect.gd" id="3_djage"]

[node name="CharacterWidget" instance=ExtResource("1_oysrp")]
script = ExtResource("1_ttnet")

[node name="NameLabel" parent="Panel" index="0"]
offset_left = 2.0
offset_right = 111.0
horizontal_alignment = 0

[node name="ImageTextureRect" parent="Panel" index="1"]
offset_left = 2.0
offset_right = 50.0
script = ExtResource("3_djage")

[node name="HealthBar" parent="Panel" index="2"]
offset_left = 55.0
offset_right = 63.0

[node name="MovementBar" parent="Panel" index="3"]
visible = false
offset_left = 66.0
offset_right = 74.0

[node name="Weapon" parent="Panel" index="4"]
offset_left = 80.0
offset_right = 120.0

[connection signal="item_dropped" from="Panel/ImageTextureRect" to="." method="_on_image_texture_rect_item_dropped"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
